--- a/public/signupCSS/signup.css
+++ b/public/signupCSS/signup.css
@@ -86,3 +86,14 @@
 .myTotal {
     text-align:center;
 }
+
+.navbg {
+    background: #13d474;
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    z-index: 99;
+    box-shadow: 0px 0px 21px -3px rgba(0,0,0,0.54);
+    height: 40px;
+}
