--- a/public/signupCSS/signup.css
+++ b/public/signupCSS/signup.css
@@ -97,3 +97,12 @@
     box-shadow: 0px 0px 21px -3px rgba(0,0,0,0.54);
     height: 40px;
 }
+
+#GoTop{
+    position: fixed;
+    bottom: 20px;
+    right:20px;
+    width: 50px;
+    height: 50px;
+
+  }
