--- a/public/signupCSS/signup.css
+++ b/public/signupCSS/signup.css
@@ -1,5 +1,17 @@
 .action {
-    background-color: yellow;
+    box-shadow: inset -33px 6px 18px -6px #276873;
+    background: linear-gradient(to bottom, #599bb3 5%, #408c99 100%);
+    background-color: #599bb3;
+    border-radius: 42px;
+    border: 5px solid #29668f;
+    display: inline-block;
+    cursor: pointer;
+    color: #ffffff;
+    font-family: Trebuchet MS;
+    font-size: 1rem;
+    font-weight: bold;
+    text-decoration: none;
+    text-shadow: 4px 5px 0px #3d768a;
 }
 
 .content {
@@ -67,15 +79,15 @@
     background-color: azure;
     height: 40px;
     box-shadow: 1px 5px 5px #666;
-    font-family:"KaiTi";
-    font-weight:bold;
+    font-family: "KaiTi";
+    font-weight: bold;
     text-indent: 10px;
     line-height: 40px;
-    
+
 }
 
 .myRadio {
-    background-color: white;  
+    background-color: white;
 }
 
 .myText {
@@ -84,7 +96,7 @@
 }
 
 .myTotal {
-    text-align:center;
+    text-align: center;
 }
 
 .navbg {
@@ -94,15 +106,43 @@
     top: 0;
     width: 100%;
     z-index: 99;
-    box-shadow: 0px 0px 21px -3px rgba(0,0,0,0.54);
+    box-shadow: 0px 0px 21px -3px rgba(0, 0, 0, 0.54);
     height: 40px;
 }
 
-#GoTop{
+#GoTop {
     position: fixed;
     bottom: 20px;
-    right:20px;
+    right: 20px;
     width: 50px;
     height: 50px;
 
-  }
+}
+
+.finish {
+    color: rgb(14, 41, 77);
+    font-size: 58px;
+    font-weight: bold;
+    /* background-color: rgb(186, 186, 186); */
+    text-shadow: rgb(46, 46, 46) 0px 4px 5px;
+}
+
+.myPerson {
+    display: inline-block;
+    text-align: center;
+    vertical-align: middle;
+    padding: 6px 24px;
+    border: 3px solid #000000;
+    border-radius: 100px;
+    background: #175bd1;
+    /* background: -webkit-gradient(linear, left top, left bottom, from(#175bd1), to(#322902));
+    background: -moz-linear-gradient(top, #175bd1, #322902);
+    background: linear-gradient(to bottom, #175bd1, #322902); */
+    /* -webkit-box-shadow: #a88806 0px 0px 40px 0px;
+    -moz-box-shadow: #a88806 0px 0px 40px 0px; */
+    box-shadow: #a88806 0px 0px 40px 0px;
+    text-shadow: #1c1701 1px 1px 1px;
+    font: normal normal bold 5px times new roman;
+    color: #ffffff;
+    text-decoration: none;
+}
